--- a/calculator.html
+++ b/calculator.html
@@ -28,6 +28,7 @@
         <input type="button" id="idx2" value="x2" onclick="result()">
         <input type="button" id="idx3" value="x3" onclick="result()">
     </div>
-    <div id="result">0</div>
+    <div id="result"></div>
+    <div id="archiv">йооу</div>
 </body>
 </html>
