--- a/calculator.html
+++ b/calculator.html
@@ -26,8 +26,8 @@
         <input type="button" id="idResult" value="=" onclick="resultRavno()">
         <input type="button" id="idShare" value="/" onclick="resultZnak('/')">
         <input type="button" id="idX" value="X" onclick="resultZnak('*')">
-        <input type="button" id="idx2" value="x2" onclick="result()">
-        <input type="button" id="idx3" value="x3" onclick="result()">
+        <input type="button" id="idx2" value="x2" onclick="mathPowAny(2)">
+        <input type="button" id="idx3" value="x3" onclick="mathPowAny(3)">
     </div>
     <div id="result"></div>
     <div id="archiv">йооу</div>
